--- a/gallery3.html
+++ b/gallery3.html
@@ -92,8 +92,8 @@
                 </div>
                 <div class="row no-gutters">
                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_striping1.jpg" src-data="images/gallery_strip">
-                            <img class="img-fluid image" src-data="images/gallery_strip" alt="">
+                        <a class="lightbox" href="images/gallery_striping1.jpg">
+                            <img class="img-fluid image" src-data="gallery_striping1.jpg" alt="">
                             <span class="description">
                                 <span class="description-heading">Parking Lot Striping</span>
                                 <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
@@ -101,8 +101,44 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_striping1.jpg" src-data="images/gallery_strip">
-                            <img class="img-fluid image" src-data="images/gallery_strip" alt="">
+                        <a class="lightbox" href="images/gallery_court1.jpg">
+                            <img class="img-fluid image" src-data="gallery_court1.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Game Court Painting</span>
+                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href-data="images/gallery_redcurb3.jpg">
+                            <img class="img-fluid image" src-data="images/gallery_redcurb3.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Red Curb Painting</span>
+                                <span class="description-body">In case of an emergency event, your parking lot will be compliant with all fire lane requirements. </span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href-data="images/gallery_design.jpg">
+                            <img class="img-fluid image" src-data="images/gallery_design.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Individual Design</span>
+                                <span class="description-body">Perfect Striping can help you make your parking lot unique.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href-data="images/gallery_court2.jpg">
+                            <img class="img-fluid image" src-data="images/gallery_court2.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Game Court Painting</span>
+                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href-data="images/gallery_striping3.jpg">
+                            <img class="img-fluid image" src-data="images/gallery_striping3.jpg" alt="">
                             <span class="description">
                                 <span class="description-heading">Parking Lot Striping</span>
                                 <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
@@ -110,11 +146,56 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_striping1.jpg" src-data="images/gallery_strip">
-                            <img class="img-fluid image" src-data="images/gallery_strip" alt="">
+                        <a class="lightbox" href-data="images/gallery_striping4.jpg">
+                            <img class="img-fluid image" src-data="images/gallery_striping4.jpg" alt="">
                             <span class="description">
                                 <span class="description-heading">Parking Lot Striping</span>
                                 <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href-data="images/gallery_court4.jpg">
+                            <img class="img-fluid image" src-data="images/gallery_court4.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Game Court Painting</span>
+                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href-data="images/gallery_court5.jpg">
+                            <img class="img-fluid image" src-data="images/gallery_court5.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Game Court Painting</span>
+                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href-data="images/gallery_striping7.jpg">
+                            <img class="img-fluid image" src-data="images/gallery_striping7.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href-data="images/gallery_striping9.jpg">
+                            <img class="img-fluid image" src-data="images/gallery_striping9.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href-data-data="images/gallery_redcurb2.jpg">
+                            <img class="img-fluid image" src-data="images/gallery_redcurb2.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Red Curb Painting</span>
+                                <span class="description-body">In case of an emergency event, your parking lot will be compliant with all fire lane requirements. </span>
                             </span>
                         </a>
                     </div>
@@ -145,25 +226,18 @@
             };
             Modernizr.on('webp', function(result) {
               if (result) {
+                  
+/*                  var imagesZoom = window.document.getElementsByClassName("lightbox");
+                  for (let i = 0; i < imagesZoom.length; i += 1) {
+                      let newAttr = imagesZoom[i].getAttribute("href-data").concat(".webp")
+                      imagesZoom[i].setAttribute("data-at-800", newAttr);
+                  }
                   var images = window.document.getElementsByClassName("img-fluid");
                   for (let i = 0; i < images.length; i += 1) {
                       images[i].setAttribute("src", images[i].getAttribute("src-data").concat(".webp"));
-                  }
-                  var imagesDiv = window.document.getElementsByClassName("lightbox");
-                  for (let i = 0; i < images.length; i += 1) {
-                      imagesDiv[i].setAttribute("data-at-420", imagesDiv[i].getAttribute("src-data").concat("_small.webp"));
-                      imagesDiv[i].setAttribute("data-at-800", imagesDiv[i].getAttribute("src-data").concat(".webp"));
-                  }
+                  }*/
               } else {
-                var images = window.document.getElementsByClassName("img-fluid");
-                  for (let i = 0; i < images.length; i += 1) {
-                      images[i].setAttribute("src", images[i].getAttribute("src-data").concat(".jpg"));
-                  }
-                  var imagesDiv = window.document.getElementsByClassName("lightbox");
-                  for (let i = 0; i < images.length; i += 1) {
-                      imagesDiv[i].setAttribute("data-at-420", imagesDiv[i].getAttribute("src-data").concat("_small.jpg"));
-                      imagesDiv[i].setAttribute("data-at-800", imagesDiv[i].getAttribute("src-data").concat(".jpg"));
-                  }
+                window.console.log("webp nu");
               }
             });
         </script>
