--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                 <p class="px-3 px-xl-4"><strong>Perfect Striping</strong> is proud to be San Diego County`s premier Parking Lot Striping company. <span>We can help with your parking lot re-engineering and a new layout design from start to finish.</span> Organize and redesign your parking lot for an easy traffic flow, making it easy and safe. Check out all of our <a href="services.html">Services</a></p>
             </div>
 
-            <div class="col-md-6 rounded order-1 order-md-2">
+            <div class="col-md-6 rounded order-1 order-md-2 textindex">
                 <img src="images/indexstriping.jpg" alt="Pic" class="img-fluid rounded">
             </div>
-            <div class="col-md-6 order-3">
+            <div class="col-md-6 order-3 textindex">
                 <img src="images/indexcourt.jpg" alt="Pic" class="img-fluid rounded">
             </div>
             <div class="col-md-6 rounded textindex order-4">
@@ -152,11 +152,11 @@
                 <p class="px-3 px-xl-4">Our crew of sealcoating experts will develop a long-term plan of action for your asphalt driveway. <span>In combination with the top of the line materials, we can protect your asphalt for many years.</span> We know how important your driveway is to the safety of you, your family, and your car. Check out all of our <a href="services.html">Services</a></p>
             </div>
 
-            <div class="col-md-6 rounded order-5 order-md-6">
+            <div class="col-md-6 rounded order-5 order-md-6 textindex">
                 <img src="images/indexsealcoating.jpg" alt="Sealcoating photo" class="img-fluid rounded">
             </div>
-            <div class="col-md-6 order-7">
-                <img src="images/indexworld.jpg" alt="Pic" class="img-fluid rounded">
+            <div class="col-md-6 order-7 textindex">
+                <img src="images/indexworld.jpg" alt="World Photo" class="img-fluid rounded">
             </div>
             <div class="col-md-6 rounded textindex order-8">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Personalised Services</h2>
