--- a/testimonials.html
+++ b/testimonials.html
@@ -91,7 +91,7 @@
             <span class="align-self-center pb-2">
                 <a href="https://www.facebook.com/perfectstriping/" class="pr-3"><img src="images/facebook.svg" alt="Facebook logo" class="rounded"></a>
                 <a href="https://www.youtube.com/user/perfectstripe1" class="pr-3"><img src="images/youtube-square.svg" alt="Youtube logo" class="rounded"></a>
-                <a href="https://www.instagram.com/perfectstriping/"><img src="images/instagram.png" alt="Instagram logo" class="rounded"></a>
+                <a href="https://www.instagram.com/perfectstriping/"><img src="images/instagram.svg" alt="Instagram logo" class="rounded"></a>
             </span>
             <p class="pl-5 pt-2 pb-3">Lic # 983424</p>
         </div>
