--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <span class="align-self-center pb-2">
             <a href="https://www.facebook.com/perfectstriping/" class="pr-3"><img src="images/facebook.svg" alt="Facebook logo" class="rounded"></a>
             <a href="https://www.youtube.com/user/perfectstripe1" class="pr-3"><img src="images/youtube-square.svg" alt="Youtube logo" class="rounded"></a>
-            <a href="https://www.instagram.com/perfectstriping/"><img src="images/instagram.png" alt="Instagram logo" class="rounded"></a>
+            <a href="https://www.instagram.com/perfectstriping/"><img src="images/instagram.svg" alt="Instagram logo" class="rounded"></a>
         </span>
         <p class="pl-5 pt-2 pb-3">Lic # 983424</p>
     </div>
@@ -182,7 +182,7 @@
 
     <script src="js/worker.js"></script>
 
-    <script>$(document).on("scroll", function () { 
+    <!--<script>$(document).on("scroll", function () { 
             var pageTop = $(document).scrollTop();
             var pageBottom = pageTop + $(window).height();
             var tags = $(".textindex");
@@ -190,6 +190,6 @@
                 if ($(tag).position().top < pageBottom) {     $(tag).addClass("visible");
                 } 
                 else { $(tag).removeClass( "visible") } } }); 
-                </script>
+    </script>-->
     </body>
 </html>
