--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
             </ol>
             <div class="carousel-inner shadow-lg">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="/images/index_carousel1.webp" alt="First slide">
+                    <img class="d-block w-100" src="/images/index_carousel1.jpg" alt="First slide">
                     <div class="carousel-caption d-block">
                         <a href="contactus.html" class="btn btn-outline-primary btn-lg d-none d-sm-inline-block">Get a FREE quote</a>
                         <p>Contact us if you want your parking lot to attract your customers</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/index_carousel2.webp" alt="Second slide">
+                    <img class="d-block w-100" src="/images/index_carousel2.jpg" alt="Second slide">
                     <div class="carousel-caption d-block">
                         <a href="contactus.html" class="btn btn-outline-primary btn-lg d-none d-sm-inline-block">Get a FREE quote</a>
                         <p>Want to play your favorite game on your newly painted gaming court?</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/index_carousel3.webp" alt="Third slide">
+                    <img class="d-block w-100" src="/images/index_carousel3.jpg" alt="Third slide">
                     <div class="carousel-caption d-block">
                         <a href="contactus.html" class="btn btn-outline-primary btn-lg d-none d-sm-inline-block">Get a FREE quote</a>
                         <p>Get the best professionals in the San Diego county</p>
