--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="Description" content="Welcome to the Perfect Striping Home Page">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
     </style>
