--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+        <meta name="Description" content="Check our work">
         <style>
             @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
         </style>
@@ -76,7 +76,7 @@
         <section class="gallery-block compact-gallery">
             <div class="container">
                 <div class="heading">
-                    <h2>For more of our work check <a href="https://www.instagram.com/perfectstriping/">Instagram</a>, <a href="https://www.facebook.com/perfectstriping/">Facebook</a> &#38; <a href="https://www.youtube.com/user/perfectstripe1">Youtube</a></h2>
+                    <h2><strong>For more of our work check <a href="https://www.instagram.com/perfectstriping/">Instagram</a>, <a href="https://www.facebook.com/perfectstriping/">Facebook</a> &#38; <a href="https://www.youtube.com/user/perfectstripe1">Youtube</a></strong></h2>
                 </div>
                 <div class="row no-gutters">
                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
