--- a/contactus.html
+++ b/contactus.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="Description" content="Get in touch with Perfect Striping">
 
         <style>
             @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
