--- a/gallery.html
+++ b/gallery.html
@@ -44,9 +44,7 @@
                                     </button>
                                   </div>
                                   <div class="modal-body">
-                                    <p>&nbsp; &nbsp; &nbsp;Perfect Striping has established an outstanding reputation in Parking lot striping in San Diego, CA and quality services working to the highest standards in the industry, Located in 2475 Paseo de las Americas San Diego Ca 92154.<br> 
-
-                                    &nbsp; &nbsp; &nbsp;We are primarily engaged to parking lot striping and handicap parking regulations. We work for all types of commercial &#38; industrial companies, road work, game courts, municipal airports, shopping centers, general office buildings, as well as apartment buildings &#38; condominium associations.</p>
+                                    <p>&nbsp; &nbsp; &nbsp;Established in 2008, Perfect striping is the leading parking lot striping company in San Diego. We are always clean, on time, efficient and can accommodate same day service in emergencies. From new layout to re-striping an existing parking lot Perfect Striping services is the one to call. We love to meet all of my customers and inform them on the product and services they will receive from Our STAFF. <br> &nbsp; &nbsp; &nbsp;Perfect Striping has established an outstanding reputation in Parking lot striping in San Diego, CA and quality services working to the highest standards in the industry.<br> &nbsp; &nbsp; &nbsp;We are primarily engaged to parking lot striping and handicap parking regulations. We work for all types of commercial &#38; industrial companies, road work, game courts, municipal airports, shopping centers, general office buildings, as well as apartment buildings &#38; condominium associations. From small jobs to large ones Perfect Striping Services will take care of your needs, Painting Road Markings like a boss..</p>
                                   </div>
                                   <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -75,9 +73,6 @@
 
         <section class="gallery-block compact-gallery">
             <div class="container">
-                <div class="heading">
-                    <h2><strong>For more of our work check <a href="https://www.instagram.com/perfectstriping/">Instagram</a>, <a href="https://www.facebook.com/perfectstriping/">Facebook</a> &#38; <a href="https://www.youtube.com/user/perfectstripe1">Youtube</a></strong></h2>
-                </div>
                 <div class="row no-gutters">
                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_striping1.jpg" src-data="gallery_striping1">
@@ -92,8 +87,8 @@
                         <a class="lightbox" href="images/gallery_court1.jpg" src-data="gallery_court1">
                             <img class="img-fluid image" src-data="gallery_court1" alt="">
                             <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                                <span class="description-heading">Game Court Design</span>
+                                <span class="description-body">Start playing your favorite game today.</span>
                             </span>
                         </a>
                     </div>
@@ -101,8 +96,8 @@
                         <a class="lightbox" href="images/gallery_redcurb3.jpg" src-data="gallery_redcurb3">
                             <img class="img-fluid image" src-data="gallery_redcurb3" alt="">
                             <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                                <span class="description-heading">Fire Lanes &#38; Red Curbs Painting</span>
+                                <span class="description-body">Perfect Striping knows all red curb requirements per San Diego city.</span>
                             </span>
                         </a>
                     </div>
@@ -110,8 +105,8 @@
                         <a class="lightbox" href="images/gallery_design.jpg" src-data="gallery_design">
                             <img class="img-fluid image" src-data="gallery_design" alt="">
                             <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                                <span class="description-heading">Individual Design</span>
+                                <span class="description-body">There is no too small or too hard job for Perfect Striping</span>
                             </span>
                         </a>
                     </div>
@@ -119,8 +114,8 @@
                         <a class="lightbox" href="images/gallery_court2.jpg" src-data="gallery_court2">
                             <img class="img-fluid image" src-data="gallery_court2" alt="">
                             <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                                <span class="description-heading">Game Court Design</span>
+                                <span class="description-body">Start playing your favorite game today.</span>
                             </span>
                         </a>
                     </div>
@@ -137,8 +132,8 @@
                         <a class="lightbox" href="images/gallery_court4.jpg" src-data="gallery_court4">
                             <img class="img-fluid image" src-data="gallery_court4" alt="">
                             <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                                <span class="description-heading">Game Court Design</span>
+                                <span class="description-body">Start playing your favorite game today.</span>
                             </span>
                         </a>
                     </div>
@@ -155,8 +150,8 @@
                         <a class="lightbox" href="images/gallery_court5.jpg" src-data="gallery_court5">
                             <img class="img-fluid image" src-data="gallery_court5" alt="">
                             <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                                <span class="description-heading">Game Court Design</span>
+                                <span class="description-body">Start playing your favorite game today.</span>
                             </span>
                         </a>
                     </div>
@@ -173,8 +168,8 @@
                         <a class="lightbox" href="images/gallery_redcurb2.jpg" src-data="gallery_redcurb2">
                             <img class="img-fluid image" src-data="gallery_redcurb2" alt="">
                             <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                                <span class="description-heading">Fire Lanes &#38; Red Curbs Painting</span>
+                                <span class="description-body">Perfect Striping knows all red curb requirements per San Diego city.</span>
                             </span>
                         </a>
                     </div>
