--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                                 </button>
                               </div>
                               <div class="modal-body">
-                                <p>&nbsp; &nbsp; &nbsp;Perfect Striping has established an outstanding reputation in Parking lot striping in San Diego, CA and quality services working to the highest standards in the industry, Located in 2475 Paseo de las Americas San Diego Ca 92154.<br> 
-
-                                &nbsp; &nbsp; &nbsp;We are primarily engaged to parking lot striping and handicap parking regulations. We work for all types of commercial &#38; industrial companies, road work, game courts, municipal airports, shopping centers, general office buildings, as well as apartment buildings &#38; condominium associations.</p>
+                                <p>&nbsp; &nbsp; &nbsp;Established in 2008, Perfect striping is the leading parking lot striping company in San Diego. We are always clean, on time, efficient and can accommodate same day service in emergencies. From new layout to re-striping an existing parking lot Perfect Striping services is the one to call. We love to meet all of my customers and inform them on the product and services they will receive from Our STAFF. <br> &nbsp; &nbsp; &nbsp;Perfect Striping has established an outstanding reputation in Parking lot striping in San Diego, CA and quality services working to the highest standards in the industry.<br> &nbsp; &nbsp; &nbsp;We are primarily engaged to parking lot striping and handicap parking regulations. We work for all types of commercial &#38; industrial companies, road work, game courts, municipal airports, shopping centers, general office buildings, as well as apartment buildings &#38; condominium associations. From small jobs to large ones Perfect Striping Services will take care of your needs, Painting Road Markings like a boss..</p>
                               </div>
                               <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
