--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!--[if lt IE 9]>
 	    <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
+    <meta name="google-site-verification" content="lqNvU7bUNyAx0zCSZx4hKfcDOY6GnrCDDoFMedI0fbg" />
 </head>
 
 <body>
