--- a/gallery.html
+++ b/gallery.html
@@ -80,7 +80,7 @@
         </nav>
 
         <section class="gallery-block compact-gallery">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row no-gutters">
                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_striping1.jpg" src-data="gallery_striping1">
