--- a/gallery.html
+++ b/gallery.html
@@ -79,8 +79,8 @@
             </div>
         </nav>
 
-        <section class="gallery-block compact-gallery">
-            <div class="container-fluid">
+        <section class="gallery-block compact-gallery m-0">
+            <div class="container-fluid px-0">
                 <div class="row no-gutters">
                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_striping1.jpg" src-data="gallery_striping1">
