--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,7 @@
             </div>
         </nav>
 
-        <section class="gallery-block compact-gallery m-0">
+        <section class="gallery-block compact-gallery p-0 m-0">
             <div class="container-fluid px-0">
                 <div class="row no-gutters">
                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
