--- a/index.html
+++ b/index.html
@@ -90,21 +90,33 @@
             </ol>
             <div class="carousel-inner shadow-lg">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="/images/index_carousel1.jpg" alt="First slide">
+                    <picture>
+                        <source srcset="/images/webp/index_carousel1.webp" type="images/webp">
+                        <source srcset="/images/index_carousel1.jpg" type="images/jpeg">
+                        <img class="d-block w-100" src="/images/index_carousel1.jpg" alt="First slide">
+                    </picture>
                     <div class="carousel-caption d-block">
                         <a href="contactus.html" class="btn btn-outline-primary btn-lg d-none d-sm-inline-block">Get a FREE quote</a>
                         <p>Contact us if you want your parking lot to attract your customers</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/index_carousel2.jpg" alt="Second slide">
+                    <picture>
+                        <source srcset="/images/webp/index_carousel2.webp" type="images/webp">
+                        <source srcset="/images/index_carousel2.jpg" type="images/jpeg">
+                        <img class="d-block w-100" src="/images/index_carousel2.jpg" alt="Second slide">
+                    </picture>
                     <div class="carousel-caption d-block">
                         <a href="contactus.html" class="btn btn-outline-primary btn-lg d-none d-sm-inline-block">Get a FREE quote</a>
                         <p>Want to play your favorite game on your newly painted gaming court?</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/index_carousel3.jpg" alt="Third slide">
+                    <picture>
+                        <source srcset="/images/webp/index_carousel3.webp" type="images/webp">
+                        <source srcset="/images/index_carousel3.jpg" type="images/jpeg">
+                        <img class="d-block w-100" src="/images/index_carousel3.jpg" alt="Third slide">
+                    </picture>
                     <div class="carousel-caption d-block">
                         <a href="contactus.html" class="btn btn-outline-primary btn-lg d-none d-sm-inline-block">Get a FREE quote</a>
                         <p>Get the best professionals in the San Diego county</p>
@@ -123,6 +135,11 @@
     </main>
 
     <div class="worker-container">
+        <picture>
+            <source srcset="/images/webp/tool.webp" type="images/webp">
+            <source srcset="/images/images/tool.png" type="images/png">
+            <img class="d-block w-100" src="images/tool.png" alt="First slide">
+        </picture>
         <img src="images/tool.png" class="worker pt-3" id="worker" alt="Worker logo">
     </div>
 
@@ -134,10 +151,18 @@
             </div>
 
             <div class="col-md-6 rounded order-1 order-md-2 textindex">
-                <img src="images/index_striping.jpg" alt="Pic" class="img-fluid rounded">
+                <picture>
+                    <source srcset="/images/webp/index_striping.webp" type="images/webp">
+                    <source srcset="images/index_striping.jpg" type="images/jpeg">
+                    <img src="images/index_striping.jpg" alt="Pic" class="img-fluid rounded">
+                </picture>
             </div>
             <div class="col-md-6 order-3 textindex">
-                <img src="images/index_court.jpg" alt="Pic" class="img-fluid rounded">
+                <picture>
+                    <source srcset="/images/webp/index_court.webp" type="images/webp">
+                    <source srcset="images/index_court.jpg" type="images/jpeg">
+                    <img src="images/index_court.jpg" alt="Pic" class="img-fluid rounded">
+                </picture>
             </div>
             <div class="col-md-6 rounded textindex order-4">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Game Court Painting</h2>
@@ -149,10 +174,18 @@
             </div>
 
             <div class="col-md-6 rounded order-5 order-md-6 textindex">
-                <img src="images/index_sealcoating.jpg" alt="Sealcoating photo" class="img-fluid rounded">
+                <picture>
+                    <source srcset="/images/webp/index_sealcoating.webp" type="images/webp">
+                    <source srcset="images/index_sealcoating.jpg" type="images/jpeg">
+                    <img src="images/index_sealcoating.jpg" alt="Sealcoating photo" class="img-fluid rounded">
+                </picture>
             </div>
             <div class="col-md-6 order-7 textindex">
-                <img src="images/index_world.jpg" alt="World Photo" class="img-fluid rounded">
+                <picture>
+                    <source srcset="/images/webp/index_world.webp" type="images/webp">
+                    <source srcset="images/index_world.jpg" type="images/jpeg">
+                        <img src="images/index_world.jpg" alt="World Photo" class="img-fluid rounded">
+                </picture>
             </div>
             <div class="col-md-6 rounded textindex order-8">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Personalised Services</h2>
